assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Dimensions
$max-content-width: {{ site.max_width }};

@import
  "variables",
  "themes",
  "layout",
  "base",
  "distill",
  "cv",
  "font-awesome/fontawesome",
  "font-awesome/brands",
  "font-awesome/solid",
  "font-awesome/regular"
;


/* --- Custom styling for profile image spacing --- */
.profile {
  margin-top: 40px;
}

